--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ description = "A type of array that keeps track of occupied and freed slots in a
 license = "GPL-2.0-or-later"
 
 [dependencies]
+bitvec = "~1.0"
